--- a/api_sample/index.html
+++ b/api_sample/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="chrome-api-experiment" content="Frobulate" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Frobulate API Demo</title>
   </head>
