--- a/api_sample/font_demo.html
+++ b/api_sample/font_demo.html
@@ -24,6 +24,6 @@
     <textarea id="console" readonly class="outputText"></textarea>
       </div>
         </div>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/font_demo.js"></script>
     </body>
 </html>
