--- a/api_sample/font_demo.html
+++ b/api_sample/font_demo.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="chrome-api-experiment" content="FontAccess|https://jpchase.github.io" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <title>Font Access API Demo</title>
+    <title>GH - Font Access API Demo</title>
   </head>
   <body>
     <div class="app">
