Add demo for other functions

--- a/api_sample/font_demo.html
+++ b/api_sample/font_demo.html
@@ -17,6 +17,7 @@
         </div>
         <div class="Buttons">
           <button id="DoButton">Get Fonts</button>
+          <button id="GetBlobButton">Get Font Blob</button>
         </div>
       </div>
       <div class="output">
