--- a/api_sample/font_demo.html
+++ b/api_sample/font_demo.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="chrome-api-experiment" content="FontAccess|https://jpchase.github.io" />
+    <meta name="chrome-api-experiment" content="XXXX|https://jpchase.github.io" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>GH - Font Access API Demo</title>
   </head>
