Add version number to token

--- a/api_sample/index.html
+++ b/api_sample/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="origin-trials" content="AS1nRywFX03inP5/biR95VEeteBJG8oWzFFZEciO8KoMy5F/stkx6WAgmyrD6meua1l1As+C60XB6Ir0FETQAg==|https://jpchase.github.io:443|Frobulate|1463503545" />
+    <meta name="origin-trials" content="1|AS1nRywFX03inP5/biR95VEeteBJG8oWzFFZEciO8KoMy5F/stkx6WAgmyrD6meua1l1As+C60XB6Ir0FETQAg==|https://jpchase.github.io:443|Frobulate|1463503545" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Frobulate API Demo</title>
   </head>
