Add metadata to trial token

--- a/bluetooth-rename/index.html
+++ b/bluetooth-rename/index.html
@@ -25,7 +25,7 @@ limitations under the License.
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <meta http-equiv="origin-trial" content="AmouPRKlSFH8F73oV4m4kOoukebIjzhobyiNIIDsqA5KT1Y1IgI6qRR/SttnGTun3jV7rYDxNRIBO1Ey3iRaxAAAAABceyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJXZWJCbHVldG9vdGgiLCAiZXhwaXJ5IjogMTQ3NTUwMDkyNH0=">
+    <meta http-equiv="origin-trial" data-feature="Web Bluetooth" data-expires="2016-10-07" content="AmouPRKlSFH8F73oV4m4kOoukebIjzhobyiNIIDsqA5KT1Y1IgI6qRR/SttnGTun3jV7rYDxNRIBO1Ey3iRaxAAAAABceyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJXZWJCbHVldG9vdGgiLCAiZXhwaXJ5IjogMTQ3NTUwMDkyNH0=">
 
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 
