--- a/add-token/index.html
+++ b/add-token/index.html
@@ -49,6 +49,7 @@ limitations under the License.
           throw "No WebUSB support.";
         }
         navigator.usb.getDevices().then(devices => {
+          console.log('Found devices:', devices);
           devices.map(device => {
             console.log(device.productName);      // "Arduino Micro"
             console.log(device.manufacturerName); // "Arduino LLC"
