--- a/add-token/index.html
+++ b/add-token/index.html
@@ -21,7 +21,7 @@ limitations under the License.
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 
     <meta http-equiv="origin-trial" data-feature="Web Share" data-expires="2016-12-23" content="ApDSdjeaIUDFQobcqYT/AVWv0ElIOryalOeHeKxT4xxPGYQ744s1zDaSrDTl+AE5YKYQyKsEN2A0WR5bJdqz7AsAAABYeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJXZWJTaGFyZSIsICJleHBpcnkiOiAxNDgyNTA4NzczfQ==">
-    <meta http-equiv="origin-trial" data-feature="WebUSB" data-expires="2016-12-29" content="AiOxm3kyvdMpdBaHJN29L6+d+RBdWDEX+oPssiv4xPwPYD4y6dXH98CUBS11sn8XoWx2nI7pX4tb7r+zojoufgsAAABWeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJXZWJVU0IiLCAiZXhwaXJ5IjogMTQ4MzA0MjQ1Mn0=">
+    <!--<meta http-equiv="origin-trial" data-feature="WebUSB" data-expires="2016-12-29" content="">-->
   </head>
   <body unresolved>
     <p>
@@ -45,17 +45,34 @@ limitations under the License.
         .catch(error => console.log('Error sharing:', error));
       });
       testAddTokenButton.addEventListener('click', function () {
-        if (!navigator.usb) {
-          throw "No WebUSB support.";
+        var addToken = true;
+        if (navigator.usb) {
+          console.log('WebUSB already enabled.');
+          addToken = false;
+        } else {
+          console.log('WebUSB is not yet enabled.');
         }
-        navigator.usb.getDevices().then(devices => {
-          console.log('Found devices:', devices);
-          devices.map(device => {
-            console.log(device.productName);      // "Arduino Micro"
-            console.log(device.manufacturerName); // "Arduino LLC"
-          });
-        })
-        .catch(error => console.log('Error getting devices:', error));
+
+        if (addToken) {
+          var tokenElement = document.createElement('meta');
+          tokenElement.httpEquiv = "origin-trial";
+          tokenElement.content = "AiOxm3kyvdMpdBaHJN29L6+d+RBdWDEX+oPssiv4xPwPYD4y6dXH98CUBS11sn8XoWx2nI7pX4tb7r+zojoufgsAAABWeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJXZWJVU0IiLCAiZXhwaXJ5IjogMTQ4MzA0MjQ1Mn0=";
+          document.getElementsByTagName('head')[0].appendChild(tokenElement);
+        }
+
+        window.setTimeout(function() {
+          if (!navigator.usb) {
+            throw "No WebUSB support.";
+          }
+          navigator.usb.getDevices().then(devices => {
+            console.log('Found devices:', devices);
+            devices.map(device => {
+              console.log(device.productName);      // "Arduino Micro"
+              console.log(device.manufacturerName); // "Arduino LLC"
+            });
+          })
+          .catch(error => console.log('Error getting devices:', error));
+        }, 1);
       });
     </script>
   </body>
