--- a/add-token/index.html
+++ b/add-token/index.html
@@ -21,11 +21,13 @@ limitations under the License.
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 
     <meta http-equiv="origin-trial" data-feature="Web Share" data-expires="2016-12-23" content="ApDSdjeaIUDFQobcqYT/AVWv0ElIOryalOeHeKxT4xxPGYQ744s1zDaSrDTl+AE5YKYQyKsEN2A0WR5bJdqz7AsAAABYeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJXZWJTaGFyZSIsICJleHBpcnkiOiAxNDgyNTA4NzczfQ==">
+    <meta http-equiv="origin-trial" data-feature="WebVR" data-expires="2017-01-30" content="AvJ8kB8YMnA1vZVuPrxhmEVbVeSTaagq7znxD0a1aA7SKMso8vu6uLOWEJAxWNGTM/ID7bozQ/lwJz5j3XB2aAIAAABVeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJXZWJWUiIsICJleHBpcnkiOiAxNDg1ODEzMDY5fQ==">
     <!--<meta http-equiv="origin-trial" data-feature="WebUSB" data-expires="2016-12-29" content="">-->
   </head>
   <body unresolved>
     <p>
-      <button id="testEmbeddedTokenButton">Test normally embedded token</button>
+      <button id="testEmbeddedWebShareTokenButton">Test WebShare embedded token</button>
+      <button id="testEmbeddedWebVRTokenButton">Test WebVR embedded token</button>
     </p>
     <p>
       <button id="testAddUSBTokenButton" type="button">Test USB token added by script</button>
@@ -34,7 +36,7 @@ limitations under the License.
 
     <script>
       "use strict";
-      testEmbeddedTokenButton.addEventListener('click', function () {
+      testEmbeddedWebShareTokenButton.addEventListener('click', function () {
         if (!navigator.share) {
           throw "No Web Share support.";
         }
@@ -44,6 +46,25 @@ limitations under the License.
             url: window.location.href
         }).then(() => console.log('Successful share'))
         .catch(error => console.log('Error sharing:', error));
+      });
+
+      testEmbeddedWebVRTokenButton.addEventListener('click', function () {
+        if (!navigator.getVRDisplays) {
+          throw "No WebVR support.";
+        }
+        if (navigator.getVRDisplays) {
+          // Enumerate the VRDisplays
+          navigator.getVRDisplays().then(function (displays) {
+            if (!displays.length) {
+              console.log("WebVR supported, but no VRDisplays found.");
+              return;
+            }
+            console.log('Found displays:', displays);
+            displays.map(vrDisplay => {
+              console.log(vrDisplay.displayId + " - " + vrDisplay.displayName);
+            });
+          });
+        }
       });
 
       testAddUSBTokenButton.addEventListener('click', function () {
