--- a/add-token/index.html
+++ b/add-token/index.html
@@ -31,6 +31,7 @@ limitations under the License.
 
     <script>
       "use strict";
+      var LongTaskToken = "AskgqD4TOQnfzHSqOQk1JuvALukPAm4X9GPpyCDoqzqrJUz5ijqvPSNgvkvOxt/otGgrss3eq0JHQnHWIXiWbgYAAABgeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJMb25nVGFza09ic2VydmVyIiwgImV4cGlyeSI6IDE0ODc4NjcxOTN9";
       var USBToken = "Aj31RLNyXWXs+HfFd55f4IUSXkPnHRNwSKW4Pu1/D+VoaUQfZUDrS60nh4bPwUUXqhy4vz/dPCTaTqlKN5ApsQUAAABWeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJXZWJVU0IiLCAiZXhwaXJ5IjogMTQ4Nzg2NzE0Mn0=";
 
       function addTrialToken(token) {
@@ -79,7 +80,7 @@ limitations under the License.
 
       testAddLongTaskTokenButton.addEventListener('click', function () {
         var addToken = true;
-        console.log('window.PerformanceLongTaskTiming', typeof window.PerformanceLongTaskTiming);
+        console.log('window.PerformanceLongTaskTiming, type = ', typeof window.PerformanceLongTaskTiming);
         if (window.PerformanceLongTaskTiming) {
           console.log('Long Task Observer already enabled.');
           addToken = false;
@@ -88,24 +89,14 @@ limitations under the License.
         }
 
         if (addToken) {
-          var tokenElement = document.createElement('meta');
-          tokenElement.httpEquiv = "origin-trial";
-          tokenElement.content = "AskgqD4TOQnfzHSqOQk1JuvALukPAm4X9GPpyCDoqzqrJUz5ijqvPSNgvkvOxt/otGgrss3eq0JHQnHWIXiWbgYAAABgeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJMb25nVGFza09ic2VydmVyIiwgImV4cGlyeSI6IDE0ODc4NjcxOTN9";
-          document.getElementsByTagName('head')[0].appendChild(tokenElement);
+          addTrialToken(LongTaskToken);
         }
 
         window.setTimeout(function() {
           if (!window.PerformanceLongTaskTiming) {
             throw "No Long Task Observer support.";
           }
-          navigator.usb.getDevices().then(devices => {
-            console.log('Found devices:', devices);
-            devices.map(device => {
-              console.log(device.productName);      // "Arduino Micro"
-              console.log(device.manufacturerName); // "Arduino LLC"
-            });
-          })
-          .catch(error => console.log('Error getting devices:', error));
+          console.log('window.PerformanceLongTaskTiming, type = ', typeof window.PerformanceLongTaskTiming);
         }, 1);
       });
     </script>
