--- a/add-token/index.html
+++ b/add-token/index.html
@@ -29,42 +29,12 @@ limitations under the License.
       <button id="testAddLongTaskTokenButton" type="button">Test Long Task token added by script</button>
     </p>
 
+    <script type="text/javascript" src="trials-helper.js"></script>
     <script>
       "use strict";
-      var LongTaskToken = "AskgqD4TOQnfzHSqOQk1JuvALukPAm4X9GPpyCDoqzqrJUz5ijqvPSNgvkvOxt/otGgrss3eq0JHQnHWIXiWbgYAAABgeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJMb25nVGFza09ic2VydmVyIiwgImV4cGlyeSI6IDE0ODc4NjcxOTN9";
-      var USBToken = "Aj31RLNyXWXs+HfFd55f4IUSXkPnHRNwSKW4Pu1/D+VoaUQfZUDrS60nh4bPwUUXqhy4vz/dPCTaTqlKN5ApsQUAAABWeyJvcmlnaW4iOiAiaHR0cHM6Ly9qcGNoYXNlLmdpdGh1Yi5pbzo0NDMiLCAiZmVhdHVyZSI6ICJXZWJVU0IiLCAiZXhwaXJ5IjogMTQ4Nzg2NzE0Mn0=";
-
-      function addTrialToken(token) {
-        var tokenElement = document.createElement('meta');
-        tokenElement.httpEquiv = "origin-trial";
-        tokenElement.content = token;
-        document.getElementsByTagName('head')[0].appendChild(tokenElement);
-      }
-
-      function tryWebUSB() {
-        window.setTimeout(function() {
-          if (!navigator.usb) {
-            throw "No WebUSB support.";
-          }
-          navigator.usb.getDevices().then(devices => {
-            console.log('Found devices:', devices);
-            devices.map(device => {
-              console.log(device.productName);      // "Arduino Micro"
-              console.log(device.manufacturerName); // "Arduino LLC"
-            });
-          })
-          .catch(error => console.log('Error getting devices:', error));
-        }, 1);
-      }
 
       testAddUSBTokenButton.addEventListener('click', function () {
-        var addToken = true;
-        if (navigator.usb) {
-          console.log('WebUSB already enabled.');
-          addToken = false;
-        } else {
-          console.log('WebUSB is not yet enabled.');
-        }
+        var addToken = !detectWebUSB();
 
         if (addToken) {
           addTrialToken(USBToken);
@@ -79,25 +49,13 @@ limitations under the License.
       });
 
       testAddLongTaskTokenButton.addEventListener('click', function () {
-        var addToken = true;
-        console.log('window.PerformanceLongTaskTiming, type = ', typeof window.PerformanceLongTaskTiming);
-        if (window.PerformanceLongTaskTiming) {
-          console.log('Long Task Observer already enabled.');
-          addToken = false;
-        } else {
-          console.log('Long Task Observer is not yet enabled.');
-        }
+        var addToken = !detectLongTaskObserver();
 
         if (addToken) {
           addTrialToken(LongTaskToken);
         }
 
-        window.setTimeout(function() {
-          if (!window.PerformanceLongTaskTiming) {
-            throw "No Long Task Observer support.";
-          }
-          console.log('window.PerformanceLongTaskTiming, type = ', typeof window.PerformanceLongTaskTiming);
-        }, 1);
+        tryLongTaskObserver();
       });
     </script>
   </body>
