--- a/add-token/index.html
+++ b/add-token/index.html
@@ -23,8 +23,8 @@ limitations under the License.
   </head>
   <body unresolved>
     <p>
-      <button id="testAddUSBTokenButton" type="button">Test USB token added by script</button>
-      <button id="testAddUSBTokenNoNavigatorButton" type="button">Test add USB token without touching navigator</button>
+      <button id="testAddWebBudgetTokenButton" type="button">Test WebBudget token added by script</button>
+      <button id="testAddWebBudgetTokenNoNavigatorButton" type="button">Test add WebBudget token without touching navigator</button>
       <br>
       <button id="testAddLongTaskTokenButton" type="button">Test Long Task token added by script</button>
     </p>
@@ -33,19 +33,19 @@ limitations under the License.
     <script>
       "use strict";
 
-      testAddUSBTokenButton.addEventListener('click', function () {
-        var addToken = !detectWebUSB();
+      testAddWebBudgetTokenButton.addEventListener('click', function () {
+        var addToken = !detectWebBudget();
 
         if (addToken) {
-          addTrialToken(USBToken);
+          addTrialToken(WebBudgetToken);
         }
 
-        tryWebUSB();
+        tryWebBudget();
       });
 
-      testAddUSBTokenNoNavigatorButton.addEventListener('click', function () {
-        addTrialToken(USBToken);
-        tryWebUSB();
+      testAddWebBudgetTokenNoNavigatorButton.addEventListener('click', function () {
+        addTrialToken(WebBudgetToken);
+        tryWebBudget();
       });
 
       testAddLongTaskTokenButton.addEventListener('click', function () {
