Update list/order of clips

--- a/videos/list-draft1.html
+++ b/videos/list-draft1.html
@@ -12,39 +12,39 @@
       const videos = [
         { videoId:'Py0-eGxhwPQ', startSeconds: 5144, endSeconds: 5149 },
         { videoId:'F8E7vrGiiTc', startSeconds: 118, endSeconds: 123 },
-        { videoId:'Bb_EPQw1Uk4', startSeconds: 2452, endSeconds: 2458 },
+        { videoId:'Bb_EPQw1Uk4', startSeconds: 2452, endSeconds: 2457 },
+        { videoId:'-QDFYtNRDJs', startSeconds: 2496, endSeconds: 2499 },
         { videoId:'Py0-eGxhwPQ', startSeconds: 358, endSeconds: 366 },
-        { videoId:'ymX8wUweiEA', startSeconds: 2555, endSeconds: 2566 },
+        { videoId:'ymX8wUweiEA', startSeconds: 1001, endSeconds: 1007 },
         { videoId:'F8E7vrGiiTc', startSeconds: 269, endSeconds: 281 },
-        { videoId:'-QDFYtNRDJs', startSeconds: 5305, endSeconds: 5310 },
+        { videoId:'-QDFYtNRDJs', startSeconds: 5305, endSeconds: 5309 },
         { videoId:'9wNEx4rYmXQ', startSeconds: 1500, endSeconds: 1507 },
         { videoId:'Bb_EPQw1Uk4', startSeconds: 327, endSeconds: 336 },
-        { videoId:'jQv5GUeAut4', startSeconds: 308, endSeconds: 313 },
+        { videoId:'-QDFYtNRDJs', startSeconds: 3911, endSeconds: 3918 },
+        { videoId:'Py0-eGxhwPQ', startSeconds: 1083, endSeconds: 1089 },
         { videoId:'-QDFYtNRDJs', startSeconds: 995, endSeconds: 1002 },
-        { videoId:'Py0-eGxhwPQ', startSeconds: 2437, endSeconds: 2442 },
+        { videoId:'Py0-eGxhwPQ', startSeconds: 2437, endSeconds: 2441 },
         { videoId:'Bb_EPQw1Uk4', startSeconds: 1080, endSeconds: 1091 },
+        { videoId:'6E-DQZ7s9eU', startSeconds: 1464, endSeconds: 1469 },
         { videoId:'Py0-eGxhwPQ', startSeconds: 546, endSeconds: 554 },
         { videoId:'-QDFYtNRDJs', startSeconds: 4175, endSeconds: 4180 },
         { videoId:'ymX8wUweiEA', startSeconds: 538, endSeconds: 544 },
-        { videoId:'jQv5GUeAut4', startSeconds: 4532, endSeconds: 4539 },
+        { videoId:'-QDFYtNRDJs', startSeconds: 4253, endSeconds: 4258 },
+        { videoId:'Py0-eGxhwPQ', startSeconds: 1444, endSeconds: 1451 },
+        { videoId:'yd-P1QzSErU', startSeconds: 1267, endSeconds: 1273 },
         { videoId:'727zsmQVwJU', startSeconds: 97, endSeconds: 105 },
         { videoId:'ymX8wUweiEA', startSeconds: 802, endSeconds: 807 },
-        { videoId:'jQv5GUeAut4', startSeconds: 726, endSeconds: 731 },
+        { videoId:'6E-DQZ7s9eU', startSeconds: 5029, endSeconds: 5033 },
         { videoId:'727zsmQVwJU', startSeconds: 2003, endSeconds: 2009 },
         { videoId:'yd-P1QzSErU', startSeconds: 2230, endSeconds: 2239 },
-        { videoId:'jQv5GUeAut4', startSeconds: 1770, endSeconds: 1775 },
+        { videoId:'727zsmQVwJU', startSeconds: 350, endSeconds: 356 },
         { videoId:'9wNEx4rYmXQ', startSeconds: 5221, endSeconds: 5226 },
         { videoId:'727zsmQVwJU', startSeconds: 1008, endSeconds: 1014 },
         { videoId:'ymX8wUweiEA', startSeconds: 4725, endSeconds: 4728 },
+        { videoId:'yd-P1QzSErU', startSeconds: 78, endSeconds: 85 },
         { videoId:'727zsmQVwJU', startSeconds: 4232, endSeconds: 4240 },
         { videoId:'6E-DQZ7s9eU', startSeconds: 1721, endSeconds: 1725 },
-        { videoId:'2KsM32AsROg', startSeconds: 2468, endSeconds: 2473 },
-        { videoId:'jQv5GUeAut4', startSeconds: 2483, endSeconds: 2492 },
-        { videoId:'Py0-eGxhwPQ', startSeconds: 1083, endSeconds: 1089 },
-        { videoId:'jQv5GUeAut4', startSeconds: 5237, endSeconds: 5244 },
-        { videoId:'-QDFYtNRDJs', startSeconds: 4253, endSeconds: 4258 },
-        { videoId:'2KsM32AsROg', startSeconds: 5112, endSeconds: 5118 },
-        { videoId:'jQv5GUeAut4', startSeconds: 5516, endSeconds: 5525 },
+        { videoId:'ymX8wUweiEA', startSeconds: 2555, endSeconds: 2566 },
       ];
 
       var tag = document.createElement('script');
