Add trial token for scroll to text

--- a/scrolltotext/scroll-to-text-fragment.html
+++ b/scrolltotext/scroll-to-text-fragment.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <title>Navigating to a text fragment directive</title>
 <meta charset=utf-8>
+<meta http-equiv="origin-trial" content="AhwLKfZSbYIknxAdBbhAHxk+SAfDCpi7Oj46lR7yF9bxaZxV2HPGhLjDs3l/zmWnyB/sqAM5qp4JNi2pBb9r8Q0AAABieyJvcmlnaW4iOiJodHRwczovL2pwY2hhc2UuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJUZXh0RnJhZ21lbnRJZGVudGlmaWVycyIsImV4cGlyeSI6MTU4MDI1NTk5OX0=">
 <link rel="help" href="https://wicg.github.io/ScrollToTextFragment/">
-<meta name="timeout" content="long">
 <body>
     <div id="links"></div>
     <div class="r">
