--- a/scrolltotext/scroll-to-text-fragment.html
+++ b/scrolltotext/scroll-to-text-fragment.html
@@ -6,12 +6,13 @@
 <body>
     <div id="links"></div>
     <div class="r">
-      <a href="https://spaceplace.nasa.gov/blue-sky/en/">
+      <a href="https://spaceplace.nasa.gov/blue-sky/en/#:~:text=sky%20is%20blue">
         <h3 class="LC20lb">Why Is the Sky Blue? | NASA Space Place – NASA Science for ...</h3>
-        <div class="TbwUpd">
-          <cite class="iUh30 bc">https://spaceplace.nasa.gov › blue-sky</cite>
+        <div>
+          <cite>https://spaceplace.nasa.gov › blue-sky</cite>
         </div>
       </a>
+      <button id="blue-sky-button" data-fragment="#:~:text=sky%20is%20blue" onclick="javascript:openWindow">Open window: #:~:text=sky%20is%20blue</button>
     </div>
 <script>
 let test_cases = [
@@ -22,19 +23,9 @@ let test_cases = [
     description: 'Empty hash should scroll to top'
   },
   {
-    fragment: '#:~:text=this,is,test,page',
-    expect_position: 'top',
-    description: 'Text directive with invalid syntax (context terms without "-") should not parse as a text directive'
-  },
-  {
     fragment: '#element:~:directive',
     expect_position: 'element',
     description: 'Generic fragment directive with existing element fragment should scroll to element'
-  },
-  {
-    fragment: '#:~:TEXT=test',
-    expect_position: 'top',
-    description: 'Uppercase TEXT directive should not parse as a text directive'
   },
   // Test exact text matching, with all combinations of context terms
   {
@@ -64,130 +55,15 @@ let test_cases = [
     description: 'Text range with no context should match text'
   },
   {
-    fragment: '#:~:text=this-,is,test',
-    expect_position: 'text',
-    description: 'Text range with prefix should match text'
-  },
-  {
-    fragment: '#:~:text=this,test,-page',
-    expect_position: 'text',
-    description: 'Text range with suffix should match text'
-  },
-  {
     fragment: '#:~:text=this-,is,test,-page',
     expect_position: 'text',
     description: 'Text range with prefix and suffix should match text'
-  },
-  // Test partially non-matching text ranges
-  {
-    fragment: '#:~:text=this,none',
-    expect_position: 'top',
-    description: 'Text range with non-matching endText should not match'
-  },
-  {
-    fragment: '#:~:text=none,page',
-    expect_position: 'top',
-    description: 'Text range with non-matching startText should not match'
-  },
-  // Test non-matching context terms
-  {
-    fragment: '#:~:text=this-,is,page,-none',
-    expect_position: 'top',
-    description: 'Text range with prefix and nonmatching suffix should not match'
-  },
-  {
-    fragment: '#:~:text=none-,this,test,-page',
-    expect_position: 'top',
-    description: 'Text range with nonmatching prefix and matching suffix should not match'
-  },
-  // Test percent encoded characters
-  {
-    fragment: '#:~:text=this%20is%20a%20test%20page',
-    expect_position: 'text',
-    description: 'Exact text with percent encoded spaces should match text'
-  },
-  {
-    fragment: '#:~:text=test%20pag',
-    expect_position: 'top',
-    description: 'Non-whole-word exact text with spaces should not match'
-  },
-  {
-    fragment: '#:~:text=%26%2C%2D',
-    expect_position: 'text',
-    description: 'Fragment directive with percent encoded syntactical characters "&,-" should match text'
-  },
-  {
-    fragment: '#:~:text=%E3%83%8D%E3%82%B3',
-    expect_position: 'text',
-    description: 'Fragment directive with percent encoded non-ASCII unicode character should match text'
-  },
-  {
-    fragment: '#:~:text=!$\'()*+./:;=?@_~',
-    expect_position: 'text',
-    description: 'Fragment directive with all TextMatchChars should match text'
-  },
-  // Test multiple text directives
-  {
-    fragment: '#:~:text=this&text=test,page',
-    expect_position: 'text',
-    description: 'Multiple matching exact texts should match text'
-  },
-  {
-    fragment: '#:~:text=tes&text=age',
-    expect_position: 'top',
-    description: 'Multiple non-whole-word exact texts should not match'
-  },
-  {
-    fragment: '#:~:text=none&text=test%20page',
-    expect_position: 'text',
-    description: 'A non-matching text directive followed by a matching text directive should match and scroll into view the second text directive'
-  },
-  {
-    fragment: '#:~:text=test%20page&directive',
-    expect_position: 'text',
-    description: 'Text directive followed by non-text directive should match text'
-  },
-  {
-    fragment: '#:~:text=test&directive&text=page',
-    expect_position: 'text',
-    description: 'Multiple text directives and a non-text directive should match text'
-  },
-  // Test text directive behavior when there's an element fragment identifier
-  {
-    fragment: '#element:~:text=test',
-    expect_position: 'text',
-    description: 'Text directive with existing element fragment should match and scroll into view text'
-  },
-  {
-    fragment: '#pagestate:~:text=test',
-    expect_position: 'text',
-    description: 'Text directive with nonexistent element fragment should match and scroll into view text'
-  },
-  {
-    fragment: '#element:~:text=nomatch',
-    expect_position: 'element',
-    description: 'Non-matching text directive with existing element fragment should scroll to element'
-  },
-  {
-    fragment: '#pagestate:~:text=nomatch',
-    expect_position: 'top',
-    description: 'Non-matching text directive with nonexistent element fragment should not match and not scroll'
   },
   // Test ambiguous text matches disambiguated by context terms
   {
     fragment: '#:~:text=more-,test%20page',
     expect_position: 'more-text',
     description: 'Multiple match text directive disambiguated by prefix should match the prefixed text'
-  },
-  {
-    fragment: '#:~:text=test%20page,-text',
-    expect_position: 'more-text',
-    description: 'Multiple match text directive disambiguated by suffix should match the suffixed text'
-  },
-  {
-    fragment: '#:~:text=more-,test%20page,-text',
-    expect_position: 'more-text',
-    description: 'Multiple match text directive disambiguated by prefix and suffix should match the text with the given context'
   },
   // Test context terms separated by node boundaries
   {
@@ -201,19 +77,6 @@ let test_cases = [
     expect_position: 'shadow',
     description: 'Text directive should match text within shadow DOM'
   },
-  // Test text directive within hidden and display none elements. These cases should not scroll into
-  // view, but still "match" in that they should be highlighted or otherwise visibly indicated
-  // if they were to become visible.
-  {
-    fragment: '#:~:text=hidden%20text',
-    expect_position: 'top',
-    description: 'Text directive should not scroll to hidden text'
-  },
-  {
-    fragment: '#:~:text=display%20none',
-    expect_position: 'top',
-    description: 'Text directive should not scroll to display none text'
-  },
   // Test horizontal scroll into view
   {
     fragment: '#:~:text=horizontally%20scrolled%20text',
@@ -223,16 +86,35 @@ let test_cases = [
 ];
 
 const linksContainer = document.querySelector('#links');
+document.querySelector('#blue-sky-button').addEventListener('click', openSearchResultWithFragment, false);
+
 for (const test_case of test_cases) {
   const link = document.createElement('a');
   link.href = `scroll-to-text-fragment-target.html${test_case.fragment}`;
   link.innerHTML = `<h3 class="LC20lb">${test_case.description}</h3><div><cite>${test_case.fragment} › ${test_case.expect_position}</cite></div>`;
 
+  const button = document.createElement('button');
+  button.textContent = `Open window: ${test_case.fragment}`;
+  button.dataset.fragment = test_case.fragment;
+  button.addEventListener('click', openWithFragment, false);
+
   const div = document.createElement('div');
 
   div.appendChild(link);
+  div.appendChild(button)
 
   linksContainer.appendChild(div);
 }
+
+function openWithFragment(event) {
+  const fragment = event.target.dataset.fragment;
+  window.open(`scroll-to-text-fragment-target.html${fragment}`, '_blank', 'noopener');
+}
+
+function openSearchResultWithFragment(event) {
+  const fragment = event.target.dataset.fragment;
+  window.open(`https://spaceplace.nasa.gov/blue-sky/en/${fragment}`, '_blank', 'noopener');
+}
+
 </script>
 </body>
